--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,10 @@
     display: grid;
     margin: 0 auto;
     width: 1600px;
-    max-height: 600 px;
-    grid-template-areas:
-    "h h"
-    "n p"
-;
+    max-height: 600px;
+    grid-template-areas: "h h" "n p";
     grid-auto-rows: 60px 1fr;
     grid-auto-columns: 2fr 10fr;
-}
-
-.header {
-    grid-area: h;
-    background-color: yellowgreen;
-}
-
-.header img {
-    width: 50px;
-}
-
-.navbar {
-    grid-area: n;
-    background-color: yellow;
-}
-
-.profile {
-    grid-area: p;
-    background-color: aqua;
 }
 
 .background img {
