--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -4,7 +4,8 @@
 }
 
 .dialogsItems {
-padding: 10px;
+    padding: 10px;
+    color: white;
 }
 
 .messages {
@@ -12,7 +13,7 @@ padding: 10px;
 }
 
 .message {
-
+    color: white;
 }
 
 .dialogsItems .active {
